# wfc

./: .gitignore  Cargo.toml  README.md
benches/: mod.rs
examples/image/: Cargo.toml  main.rs
examples/simple/: Cargo.toml  main.rs
examples/tiles/: Cargo.toml  main.rs
src/: bitmap.rs  bitset.rs  data.rs  lib.rs  main.rs  prelude.rs  sample.rs  surface.rs  tile.rs  tileset.rs  traits.rs  types.rs  util.rs  wave.rs  wavetile.rs
src/ext/: image.rs  mod.rs  ndarray.rs
src/impls/: image.rs  mod.rs
src/tests/: mod.rs
src/tests/assets/: sample.xcf
src/wave/: mod.rs  traits.rs
src/wfc/: mod.rs  sample.rs  tile.rs  traits.rs  types.rs  wave.rs  wavetile.rs
tests/: mod.rs
