workspace = { members = ["examples/image", "examples/tiles"] }

[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6" }
sdl2 = { version = "0.35.2", features = ["image"], default-features = false, optional = true }
image = { version = "0.25.0", optional = true }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"

[features]
default = ["sdl", "image"]
image = ["dep:image"]
sdl = ["dep:sdl2"]

[profile.release]
debug = true
