workspace = { members = ["examples/image", "examples/tiles"] }

[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6" }
sdl2 = { version = "0.35.2", features = ["image"], default-features = false, optional = true }
image = { version = "0.25.0", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
default = ["image", "wrapping", "parallel"]
wrapping = []
parallel = ["dep:rayon", "ndarray/rayon"]
image = ["dep:image"]
sdl = ["dep:sdl2"]

[profile.release]
debug = true
